ChangeLog for InfoViewer plugin
===========================================================================

Version 1.5.8  Depends on jedit 4.3pre5, Java 1.4
    * Fixed action infoviewer.open that was calling
      infoviewer.InfoViewerPlugin.openURL(view, null, -1)
      that doesn't exist anymore (Matthieu Casanova)
    * Now remembers vertical scrollbar positions at
      hyperlink click locations, so when you go "back", you
      will actually go where you were when you clicked on the link. 
      (Alan Ezust) 

Version 1.5.6 Depends: jEdit 4.3pre3, Java 1.4 
    * History, Back and Forward actions rewritten - now the current position
      gets pushed onto the forward stack when back is pressed, and vice-versa.
      (Alan Ezust)  

Version 1.5.5 Depends: jEdit 4.3pre3, Java 1.4
      HelpViewer shows the help sidebar, InfoViewer hides the help sidebar 
      The same class is used for both dockables, so you can show/hide it
      from the "View" menu. (Alan Ezust)

Version 1.5 - requires jedit 4.3pre3, Java 1.4 
    * Added option to use InfoViewer instead of HelpViewer
    * Added HelpInfoViewer - an InfoViewer with the Help table of contents
        as an optional sidebar. (Alan Ezust) 

Version 1.4 - requires jEdit 4.3pre2, Java 1.4
    * Updated for Jedit 4.3pre2 (Alan Ezust)

VERSION 1.2 - Requires jEdit 4.1, Java 1.4

    * fixed deprecation warnings (Stefan Kost)
    * updated icons (Stefan Kost)
    * added actions for increasing and decreasing the font-size (Stefan Kost)


VERSION 1.1

    * updated to jEdit 4.0 dockable API
    * bugfix: #509058 (Verify Error On InfoViewer)
    * removed old JDK 1.1 workarounds
    * requires at least jEdit 4.0pre6


VERSION 1.0

    * no longer dependent on EditBus plugin (plugins that used the message
      org.gjt.sp.jedit.msg.ViewURL from the EditBus plugin should now use
      public static void InfoViewerPlugin.openURL(View,String) directly).